--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,13 @@
   "builds": [
     { "src": "api/login-request.js", "use": "@vercel/node" },
     { "src": "api/verify-login.js", "use": "@vercel/node" },
-    { "src": "api/loja.js", "use": "@vercel/node" }
+    { "src": "api/loja.js", "use": "@vercel/node" },
+    { "src": "api/criarproduto.js", "use": "@vercel/node" }
   ],
   "routes": [
     { "src": "/api/login-request", "dest": "api/login-request.js" },
     { "src": "/api/verify-login", "dest": "api/verify-login.js" },
-    { "src": "/api/loja", "dest": "api/loja.js" }
+    { "src": "/api/loja", "dest": "api/loja.js" },
+    { "src": "/api/criarproduto", "dest": "api/criarproduto.js" }
   ]
 }
