--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,18 @@
     { "src": "api/login-request.js", "use": "@vercel/node" },
     { "src": "api/verify-login.js", "use": "@vercel/node" },
     { "src": "api/loja.js", "use": "@vercel/node" },
-    { "src": "api/criarproduto.js", "use": "@vercel/node" }
+
+    { "src": "api/criarproduto.js", "use": "@vercel/node" },
+    { "src": "api/editarproduto.js", "use": "@vercel/node" },
+    { "src": "api/deletarproduto.js", "use": "@vercel/node" }
   ],
   "routes": [
     { "src": "/api/login-request", "dest": "api/login-request.js" },
     { "src": "/api/verify-login", "dest": "api/verify-login.js" },
     { "src": "/api/loja", "dest": "api/loja.js" },
-    { "src": "/api/criarproduto", "dest": "api/criarproduto.js" }
+
+    { "src": "/api/criarproduto", "dest": "api/criarproduto.js" },
+    { "src": "/api/editarproduto", "dest": "api/editarproduto.js" },
+    { "src": "/api/deletarproduto", "dest": "api/deletarproduto.js" }
   ]
 }
